@@ -1,6 +1,7 @@
 Changes in version 2.2.4
   o New function to set and get module properties
   o allow getting baseUrl using labkey.getBaseUrl
+  o allow NA translation behavior to be overridden in insertRows and importRows
 
 Changes in version 2.2.3
   o New helper functions for RStudio integration
